[tool.poetry]
name = "dacutil"
version = "0.1.8"
description = "For Data Analytic"
authors = ["Attapon Thanawong <attapon_srem@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

pandas = "^2.1.0"
pyarrow = "^14.0.0"
addict = "2.4.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
